--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Essa API possui dados dos exoplanetas (planetas que não estão no nosso sistema solar). <br> Os dados de localização dos exoplanetas, armazenados em CSV, foram capturados com o telescópio espacial Kepler (K2) da NASA. O Kepler, serve tanto para explorar os exoplanetas, quanto para estudar a possibilidade de vida em cada um deles.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "./node_modules/.bin/nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "csv-parse": "^5.5.5"
   }
 }
